2025-07-20T01:06:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16394536317 # 710
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-20
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 573 966 / 586 979
* notice: next accum: outdated-unq outdated-all / unq all: 574 967 / 587 980
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-06] / [2025-07-19]

2025-07-19T00:58:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16383167897 # 709
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-19
* notice: last 14d: unq all: 4 13
* notice: prev accum: outdated-unq outdated-all / unq all: 572 965 / 586 979
* notice: next accum: outdated-unq outdated-all / unq all: 573 966 / 586 979
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-07-04] / []

2025-07-18T00:59:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16359521180 # 708
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-18
* notice: last 14d: unq all: 4 14
* notice: prev accum: outdated-unq outdated-all / unq all: 570 963 / 585 978
* notice: next accum: outdated-unq outdated-all / unq all: 572 965 / 586 979
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-03] / [2025-07-17]

2025-07-17T01:00:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16333650364 # 707