@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-20T01:06:13Z",
+  "timestamp" : "2025-07-21T01:03:44Z",
   "count_outdated" : 967,
   "uniques_outdated" : 574,
-  "count" : 980,
-  "uniques" : 587,
+  "count" : 981,
+  "uniques" : 588,
   "clones" : [
     {
       "timestamp": "2025-07-08T00:00:00Z",
@@ -97,6 +97,15 @@
     },
     {
       "timestamp": "2025-07-19T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
