@@ -1,5 +1,5 @@
 {
-  "count": 13,
+  "count": 14,
   "uniques": 4,
   "clones": [
     {
@@ -54,6 +54,11 @@
     },
     {
       "timestamp": "2025-07-19T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-20T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
