@@ -1,3 +1,12 @@
+2025-07-21T01:03:44Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16406283388 # 711
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-21
+* notice: last 14d: unq all: 4 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 574 967 / 587 980
+* notice: next accum: outdated-unq outdated-all / unq all: 574 967 / 588 981
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-07-20]
+
 2025-07-20T01:06:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16394536317 # 710
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-20
